# GeForceNOW-SDK

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.samplelauncher.thirdparty  LICENSE.thirdparty  README.md  generate.bat  generate_x86.bat
doc/SDK-GFN-RUNTIME/: index.html
doc/SDK-GFN-RUNTIME/html/: _gfn_runtime_sdk___c_a_p_i_8h.html  _gfn_runtime_sdk___c_a_p_i_8h_source.html  _gfn_runtime_sdk___wrapper_8h.html  _gfn_runtime_sdk___wrapper_8h_source.html  _gfn_sdk_8h.html  _gfn_sdk_8h_source.html  annotated.html  classes.html  customdoxygen.css  dir_248dc7cedc1ea0c288f821d4f2f68d94.html  dir_3ced1c6cae6f6d256f8926ebde7aecd7.html  dir_47e34063183c9e75cb0005e4cff9ac09.html  dir_6b7317c81c9a2ef713b4601e17f18bc0.html  dir_9e5becbb015178a827a3458256925689.html  dir_bdc690aa342ef3fe7cc08b718d1c7502.html  dir_c783d3b2fd02c803203877c25ea9e487.html  dir_de06db2b1b2ae2e685991a273d32a19a.html  dir_de2f95bc5498594e37e699037a95e74f.html  dir_f92a6e80c54f08c61222eed434e6fab9.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_p.html  globals_s.html  globals_t.html  (+34 more)
doc/SDK-GFN-RUNTIME/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  functions_0.js  groups_1.js  groups_2.js  pages_0.js  (+22 more)
doc/SDK-GFN-RUNTIME/style/: footer.html  header.html
include/: GfnRuntimeSdk_CAPI.h  GfnRuntimeSdk_SecureLoadLibrary.c  GfnRuntimeSdk_SecureLoadLibray.c  GfnRuntimeSdk_SecureLoadLibray.h  GfnRuntimeSdk_Wrapper.c  GfnRuntimeSdk_Wrapper.h  GfnSdk.h  GfnSdk_SecureLoadLibrary.c  GfnSdk_SecureLoadLibrary.h
samples/: README.md
samples/CGameAPISample/: CMakeLists.txt  Main.c  SampleModule.c  SampleModule.h
samples/CloudCheckAPI/: CMakeLists.txt  Main.c
samples/Common/: CMakeLists.txt  GfnCloudCheckAppAdapter.h  GfnCloudCheckUtils.h
samples/Common/Platform/Posix/: GfnCloudCheckUtils.c
samples/Common/Platform/Win/: GfnCloudCheckUtils.c
samples/CubeSample/: CMakeLists.txt  GfnSdkInterface.c  GfnSdkInterface.h  Main.c  README.md  resource.rc
samples/CubeSample/cube/: cube.c  cube.h
samples/CubeSample/cube/Include/: gettime.h  linmath.h  nvidia_logo.h  object_type_string_helper.h
samples/OpenClientBrowser/: CMakeLists.txt  Main.c
samples/PartnerDataAPI/: CMakeLists.txt  Main.c
samples/PreWarmSample/: CMakeLists.txt  Main.c
samples/SDKDllDirectRefSample/: CMakeLists.txt  Main.c  SampleModule.c  SampleModule.h
samples/SampleCApp/: CMakeLists.txt  Main.c  SampleModule.c  SampleModule.h
samples/SampleLauncher/: CMakeLists.txt
samples/SampleLauncher/src/: CMakeLists.txt
samples/SampleLauncher/src/gfn_sdk_demo/: CMakeLists.txt  app_browser_impl.cc  app_browser_win_impl.cc  app_renderer_impl.cc  client_impl.cc  client_impl.h  gfn_sdk_helper.cc  gfn_sdk_helper.h  resource_util_win_impl.cc
samples/SampleLauncher/src/gfn_sdk_demo/resources/: gfn_sdk.html  gfn_sdk_dev.html  gfn_sdk_valve.html  redirect.html
samples/SampleLauncher/src/gfn_sdk_demo/resources/win/: resource.h  resource.rc
samples/SampleLauncher/src/minimal/: CMakeLists.txt  app_browser_minimal.cc  app_other_minimal.cc  app_renderer_minimal.cc  client_minimal.cc  main_minimal.cc
samples/SampleLauncher/src/shared/: .browser_util.cc.swp  CMakeLists.txt  README.md  browser_util.cc  client_manager.cc  client_util.cc  client_util.h  client_util_linux.cc  client_util_win.cc  defines.h  main.h  main_linux.cc  main_util.cc  main_win.cc  process_helper_mac.cc  resource_util.cc  resource_util_linux.cc  resource_util_posix.cc  resource_util_win.cc
samples/SampleLauncher/src/shared/resources/win/: resource.h  shared.exe.manifest  shared.rc
samples/SampleService/: CMakeLists.txt
samples/SampleService/src/common/: deserialize_buffer.h  deserialize_iterator.h  lpc_pipe.cpp  lpc_pipe.h  memory_view.h  serialize_common.h  serialize_iterator.h  traits.h  transport.h  utils.cpp  utils.h
samples/SampleService/src/lib/: client.cpp  client.h  command.h  port_name.h  server.cpp  server.h  status.h
samples/SampleService/src/svc/: instance.cpp  instance.h  main.cpp  service.cpp  service.h
